# gpgpuraytrace

./: .gitignore  README  installer.nsi
gpuraytrace/: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Common.h  ComputeDirect3D.cpp  ComputeDirect3D.h  DeviceDirect3D.cpp  DeviceDirect3D.h  DeviceFactory.cpp  DeviceFactory.h  Directory.cpp  Directory.h  DirectoryWinAPI.cpp  DirectoryWinAPI.h  Factory.h  ICompute.h  IDevice.h  IInput.cpp  IInput.h  IWindow.h  InputWinAPI.cpp  InputWinAPI.h  Logger.cpp  Logger.h  Raytracer.cpp  Raytracer.h  Resource.rc  WindowFactory.cpp  WindowFactory.h  WindowWinAPI.cpp  WindowWinAPI.h  gpuraytrace.sln  gpuraytrace.vcxproj  gpuraytrace.vcxproj.filters  main.cpp  resource.h
gpuraytrace/Adapters/: ComputeDirect3D.cpp  ComputeDirect3D.h  DeviceDirect3D.cpp  DeviceDirect3D.h  DirectoryWinAPI.cpp  DirectoryWinAPI.h  InputWinAPI.cpp  InputWinAPI.h  RecorderWinAPI.cpp  RecorderWinAPI.h  ShaderVariableDirect3D.cpp  ShaderVariableDirect3D.h  TextureDirect3D.cpp  TextureDirect3D.h  TimerWinAPI.cpp  TimerWinAPI.h  WindowWinAPI.cpp  WindowWinAPI.h
gpuraytrace/Common/: CRC32.cpp  CRC32.h  Common.h  Directory.cpp  Directory.h  IInput.cpp  IInput.h  Logger.cpp  Logger.h  Settings.h  Timer.cpp  Timer.h  Types.h  VFS.cpp  VFS.h  VariableManager.cpp  VariableManager.h
gpuraytrace/Factories/: DeviceFactory.cpp  DeviceFactory.h  Factory.h  ICompute.h  IDevice.h  IRecorder.h  IResource.h  ITexture.h  IWindow.h  RecorderFactory.cpp  RecorderFactory.h  WindowFactory.cpp  WindowFactory.h
gpuraytrace/Gameplay/: Flyby.cpp  Flyby.h
gpuraytrace/Graphics/: Camera.cpp  Camera.h  DDSTextureLoader.cpp  IShaderVariable.h  Noise.cpp  Noise.h  Terrain.cpp  Terrain.h
gpuraytrace/Media/benchmark/shaders/: terrain.hlsl
gpuraytrace/Media/common/shaders/: antialiasing.hlsl  camerarays.hlsl  noise.hlsl  sky.hlsl  terrain_old1.hlsl  tracescreen.hlsl  tracing.hlsl
gpuraytrace/Media/greenrocks/shaders/: color.hlsl  terrain.hlsl
gpuraytrace/Media/nomadplains/shaders/: color.hlsl  terrain.hlsl
gpuraytrace/Media/simple/shaders/: color.hlsl  terrain.hlsl
gpuraytrace/Media/testing/shaders/: color.hlsl  terrain.hlsl
gpuraytrace/Media/textures/: README.txt
gpuraytrace/Media/winter/shaders/: color.hlsl  terrain.hlsl
gpuraytrace/shader/: camerarays.hlsl  color.hlsl  csmain.hlsl  noise.hlsl  sky.hlsl  tracescreen.hlsl  tracing.hlsl
proto/: proto.sln
proto/proto/: main.cpp  proto.vcxproj
variableclient/: App.xaml  App.xaml.cs  ConnectBox.xaml  ConnectBox.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Native.cs  VariableManager.cs  Widget.xaml  Widget.xaml.cs  variableclient.csproj  variableclient.sln
variableclient/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
